<resources>
    <string name="app_name">TallyLock</string>
    <string name="title_activity_upload_file_to_ipfs">UploadFileToIPFS</string>
    <string name="take">Take</string>
    <string name="rationale_camera">We need the camera to make this work</string>
    <string name="image_capture_failed">Failed to capture the image</string>
    <string name="image_save_failed">Failed to save the image</string>
    <string name="extension_unavailable">This feature is not available.</string>
    <string name="extension_feature_prompt">Camera Features</string>
    <string name="toggle_camera_lens">Toggle Camera</string>
    <string name="save_image">Save Image</string>
    <string name="taken_image">Taken Image</string>
    <string name="image_popup">Image</string>
    <string name="signDocumentFunction">signDocument</string>
    <string name="upload">Upload</string>
    <string name="send_file">Send File</string>

    <string name="sign_document">Sign Document</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="take_photo">Take Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retake">Retake</string>
    <string name="sign">Sign</string>
    <string name="preview">Preview</string>
    <string name="work_queue">Work Queue</string>
    <string name="document_history">Document History</string>
    <string name="wallet">Wallet</string>
    <string name="msg_share_only_signed">You can only share successfuly signed docs</string>
    <string name="symbol_eth">ETH</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="amount_in_eth">Amount in ETH</string>
    <string name="destination_address">Destination Address</string>
    <string name="cancel">Cancel</string>
    <string name="message_not_valid_qr_code">This is not a valid Ethereum QR code</string>
    <string name="tx_submitted">Transaction has been submitted</string>
    <string name="view">View</string>
    <string name="format_address_ether_scan">https://rinkeby.etherscan.io/tx/%s</string>
    <string name="error_submitting_tx">There was a problem sending your ETH</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="settings">Settings</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="export_wallet">Export Wallet</string>
    <string name="key_generate_wallet">keyGenerateWallet</string>
    <string name="key_import_wallet">keyImportWallet</string>
    <string name="key_export_wallet">keyExportWallet</string>
    <string name="ok">OK</string>
    <string name="account_mnemonic">Account Mnemonic</string>
    <string name="message_mnemonic_copied">Mnemonic copied to clipboard</string>

    <string name="k_WalletSharedPreferences">NotarizeSharedPreferences</string>
    <string name="k_mnemonic_phrase">kMnemonicPhrase</string>
    <string name="k_WalletFileName">k_WalletFileName</string>
    <string name="k_UnauthorizedWalletFileName">k_UnauthorizedWalletFileName</string>
    <string name="message_generate_wallet_warning">Remember that generating a new wallet without backing up the old one will result in a permanent loss of access of the old account. Use the Export Wallet option to get the mnemonic.</string>
    <string name="message_restore_wallet_warning">Restoring a wallet will override the one already loaded in the app, without a backup you can loss access of it. Use the Export Wallet option to get the mnemonic.</string>
    <string name="do_it">Do it!</string>
    <string name="mnemonic_phrase">Mnemonic Phrase</string>
    <string name="empty_mnemonic">Empty mnemonic</string>
    <string name="wallet_restored">Wallet restored</string>
    <string name="generic_something_wrong">Something went wrong</string>
    <string name="wallet_copied">Wallet copied to clipboard</string>
</resources>
