<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/takePhoto">

    <fragment
        android:id="@+id/takePhoto"
        android:name="com.notarize.app.views.take_photo.TakePhotoFragment"
        android:label="@string/take_photo"
        tools:layout="@layout/fragment_photo">
        <action
            android:id="@+id/actionPreview"
            app:destination="@id/photoPreview"
            app:popUpTo="@+id/takePhoto"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/photoPreview"
        android:name="com.notarize.app.views.photo_preview.PhotoPreviewFragment"
        android:label="@string/preview"
        tools:layout="@layout/fragment_photo_preview">
    </fragment>

    <fragment
        android:id="@+id/workQueue"
        android:name="com.notarize.app.views.workqueue.WorkQueueFragment"
        android:label="@string/work_queue"
        tools:layout="@layout/fragment_work_queue">

    </fragment>
</navigation>