<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <Spinner-->
            <!--                android:id="@+id/extensionFeatures"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:entries="@array/extension_features"-->
            <!--                android:prompt="@string/extension_feature_prompt"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintRight_toLeftOf="@+id/toggleCameraLens"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <ImageView
                android:id="@+id/toggleCameraLens"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/toggle_camera_lens"
                android:padding="@dimen/toggle_camera_lens_padding"
                android:src="@drawable/ic_flip_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/takenImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/taken_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/bt_upload"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/upload"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/takenImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextureView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takenImage" />

</androidx.constraintlayout.widget.ConstraintLayout>